tests/ats/manifests/ciao-world.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ciao-world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciao-world
  namespace: ciao-world
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ciao-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ciao-world
    spec:
      containers:
      - name: ciao-world
        image: quay.io/giantswarm/helloworld
        livenessProbe:
          httpGet:
            port: 8080
            scheme: HTTP
            path: /healthz
        readinessProbe:
          httpGet:
            port: 8080
            scheme: HTTP
            path: /healthz
---
apiVersion: v1
kind: Service
metadata:
  name: ciao-world
  namespace: ciao-world
spec:
  selector:
    app.kubernetes.io/name: ciao-world
  ports:
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciao-world
  namespace: ciao-world
spec:
  ingressClassName: other-ingress
  rules:
  - host: ciao-world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ciao-world
            port:
              number: 8080
