tests/ats/manifests/hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
    spec:
      containers:
      - name: hello-world
        image: quay.io/giantswarm/helloworld:0.4.0
        livenessProbe:
          httpGet:
            port: 8080
            scheme: HTTP
            path: /healthz
        readinessProbe:
          httpGet:
            port: 8080
            scheme: HTTP
            path: /healthz
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app.kubernetes.io/name: hello-world
  ports:
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 8080
